Fix error reporting

BUG:239040